--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -222,7 +222,7 @@
     box-shadow: 0 2px 0 0 var(--destructive-border);
   }
   .texture {
-    background-image: url(https://matsu-theme.vercel.app/texture.jpg);
+    background-image: url("/.proxy/matsu/texture.jpg");
     background-size: 100% 100%;
     background-repeat: repeat;
     opacity: 0.12;
